--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,3 +1,15 @@
+/* -----GLOBAL----- */
+body {
+    background-color: rgb(31, 31, 31);
+}
+.btn {
+    background-color: transparent !important;
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
+    border: 1px solid transparent !important;
+    background-image: none; 
+}
+
 /* -----HEADER CONTAINER----- */
 
 #headerContainer {
@@ -15,6 +27,7 @@
     right: 48%;
 }
 
+
 /* -----SECTION GROUP STYLING----- */
 
 #mainSection1, #mainSection3 {
@@ -31,11 +44,22 @@
     padding-bottom: 200px;
     text-align: center;
 }
-#aboutPic {
-width: 100%;
+#triangle {
+    margin: auto;
+    width: 0%;
+    height: 0;
+    border-left: 40vw solid transparent;
+    border-right: 40vw solid transparent;
+    border-top: 40vw solid brown;
+}
+#profile-pic {
+    height: 500px;
+    border-radius: 50%;
+    position: relative;
+    top: -450px;
 }
 #aboutHeader {
-    margin-top: 5%;
+    margin-top: -23%;
     margin-bottom: 2%;
 }
 .accordion {
@@ -50,18 +74,44 @@ width: 100%;
 
 #mainSection2 {
     height: 100vh;
-    
 }
 #projectsHeader {
     float: left;
     padding-left: 10%;
     padding-top: 10%;
+    margin-bottom: 8%;
 }
 #abstractSec2 {
     float: right;
-    height: 100vh;
+    position: absolute;
+    right: 0;
+    height: 100%;
     width: 40%;
     background-color: burlywood;
+}
+#projectSelector {
+    margin-left: 40%;
+    font-size: x-large;
+    white-space: nowrap;
+    border: 1px solid black;
+    background-color: tomato;
+    float: left;
+    width: 20%;
+    text-align: center;
+}
+#projectSelector:hover {
+    font-size: xx-large;
+}
+#projectSelText {
+    writing-mode: vertical-rl;
+    text-orientation: upright;
+}
+#projectCarousel {
+    float: right;
+    margin-right: 10%;
+    margin-top: 5%;
+    height: 60%;
+    width: 80%;
 }
 
 
