--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -161,15 +161,44 @@ body {
 /* -----SECTION FOUR----- */
 
 #mainSection4 {
-    height: 100vh;
+    height: 100%;
     text-align: center;
-    background: -webkit-linear-gradient(130deg, olive 40%, rgba(0,0,0,0) 30%), -webkit-linear-gradient(-130deg, olive 40%, tan 40%);
-    background: -o-linear-gradient(130deg, olive 40%, rgba(0,0,0,0) 30%), -o-linear-gradient(-130deg, olive 40%, tan 40%);
-    background: -moz-linear-gradient(130deg, olive 40%, rgba(0,0,0,0) 30%), -moz-linear-gradient(-130deg, olive 40%, tan 40%);
-    background: linear-gradient(130deg, olive 40%, rgba(0,0,0,0) 30%), linear-gradient(-130deg, olive 40%, tan 40%);
+    position: relative;
+    background: -webkit-linear-gradient(130deg, darkslategray 40%, rgba(0,0,0,0) 30%), -webkit-linear-gradient(-130deg, darkslategray 40%, tan 40%);
+    background: -o-linear-gradient(130deg, darkslategray 40%, rgba(0,0,0,0) 30%), -o-linear-gradient(-130deg, darkslategray 40%, tan 40%);
+    background: -moz-linear-gradient(130deg, darkslategray 40%, rgba(0,0,0,0) 30%), -moz-linear-gradient(-130deg, darkslategray 40%, tan 40%);
+    background: linear-gradient(130deg, darkslategray 40%, rgba(0,0,0,0) 30%), linear-gradient(-130deg, darkslategray 40%, tan 40%);
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 5%;
 }
 #hobbiesHeader {
     margin-top: 5%;
+}
+#hoddiesContainer {
+    height: 100%;
+    margin: 5%;
+    padding: 20px;
+    background-color:olive;
+    color: white;
+}
+.icon {
+    height: 150px;
+    margin: 2%;
+    color: white;
+}
+#contact, #checkOut {
+    background-color: tan;
+    color: black;
+    text-align: center;
+    font-size: 20px;
+    margin-left: 15%;
+    margin-bottom: 15%;
+    width: 500px;
+    padding: 5%;
+}
+#emailLink, #resumeLink, #gitLink {
+    color: black;
 }
 
 /* -----FOOTER----- */
@@ -179,8 +208,8 @@ body {
     text-align: center;
     position: relative;
     bottom: 0;
-    height: 100vh;
-    line-height: 60px;
+    height: 100%;
     background-color: #273E47;
-    padding-top: 50vh;
+    padding-top: 10%;
+    padding-bottom: 3%;
 }
