--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,7 +1,6 @@
 /* -----GLOBAL----- */
 html {
     scroll-behavior: smooth;
-    box-sizing: border-box;
 }
 body {
     background-color: rgb(31, 31, 31);
@@ -10,13 +9,15 @@ body {
 /* -----HEADER CONTAINER----- */
 
 #headerContainer {
+    font-family: 'Exo', sans-serif;
     height: 100vh;
-    background-color: burlywood;
+    background-color: rgba(183, 105, 53);
     text-align: center;
     padding-top: 35vh;
     position: relative;
 }
 #mainHeader {
+    font-weight: bold;
     font-size: 100px;
 }
 #scrollElem {
@@ -36,27 +37,28 @@ body {
 
 /* -----SECTION GROUP STYLING----- */
 
-#mainSection1, #mainSection3 {
-    background-color: chocolate;
-}
+
 
 /* -----SECTION ONE----- */
 
 #mainSection1 {
+    color: white;
+    font-family: 'Exo', sans-serif;
     height: 100vh;
     padding-bottom: 200px;
     padding-top: 200px;
     text-align: center;
-    background: -webkit-linear-gradient(45deg, chocolate 49%, rgba(0,0,0,0) 30%), -webkit-linear-gradient(-45deg, chocolate 49%, brown 49%);
-    background: -o-linear-gradient(45deg, chocolate 49%, rgba(0,0,0,0) 30%), -o-linear-gradient(-45deg, chocolate 49%, brown 49%);
-    background: -moz-linear-gradient(45deg, chocolate 49%, rgba(0,0,0,0) 30%), -moz-linear-gradient(-45deg, chocolate 49%, brown 49%);
-    background: linear-gradient(45deg, chocolate 49%, rgba(0,0,0,0) 30%), linear-gradient(-45deg, chocolate 49%, brown 49%);
+    background: -webkit-linear-gradient(45deg, rgba(56, 65, 63) 49%, rgba(0,0,0,0) 30%), -webkit-linear-gradient(-45deg,  rgba(56, 65, 63) 49%, rgba(88, 81, 35) 49%);
+    background: -o-linear-gradient(45deg,  rgba(56, 65, 63) 49%, rgba(0,0,0,0) 30%), -o-linear-gradient(-45deg,  rgba(56, 65, 63) 49%, rgba(88, 81, 35) 49%);
+    background: -moz-linear-gradient(45deg,  rgba(56, 65, 63) 49%, rgba(0,0,0,0) 30%), -moz-linear-gradient(-45deg,  rgba(56, 65, 63) 49%, rgba(88, 81, 35) 49%);
+    background: linear-gradient(45deg,  rgba(56, 65, 63) 49%, rgba(0,0,0,0) 30%), linear-gradient(-45deg,  rgba(56, 65, 63) 49%, rgba(88, 81, 35) 49%);
 }
 #profile-pic {
     height: 500px;
     border-radius: 50%;
 }
 #aboutHeader {
+    font-weight: bold;
     margin-top: 2%;
     margin-bottom: 2%;
 }
@@ -65,17 +67,27 @@ body {
     margin: auto;
 }
 .aboutItem {
-    border-bottom: 1px solid black;
+    color: white;
+    border-bottom: 1px solid white;
+}
+.aboutBtn {
+    color: white;
+}
+.aboutBtn:hover {
+    background-color: rgba(183, 105, 53,.5);
 }
 
 /* -----SECTION TWO----- */
 
 #mainSection2 {
+    font-family: 'Exo', sans-serif;
     height: 100%;
     padding-bottom: 10%;
-    background: linear-gradient(90deg, teal 60%, burlywood 60%);
+    background: linear-gradient(90deg, rgba(20, 54, 66) 60%, rgba(74, 71, 62) 60%);
 }
 #projectsHeader {
+    color: white;
+    font-weight: bold;
     float: left;
     padding-left: 10%;
     padding-top: 5%;
@@ -90,10 +102,13 @@ body {
 .frontSelector {
     color: white;
 }
+#projectSelector:hover {
+    background: rgba(255,255,255,0.2);
+}
 #projectSelText {
     writing-mode: vertical-rl;
     text-orientation: upright;
-    background-color: olive;
+    background-color: rgba(88, 81, 35);
 }
 #projectCarouselFRONT, #projectCarouselBACK {
     float: right;
@@ -108,10 +123,14 @@ body {
 .carousel-caption{
     position: absolute;
     height: 250px;
-    background-color: rgb(255, 69, 0,.8);
+    background-color: rgb(129, 88, 57,.8);
     box-shadow: 0 5px 15px rgba(0,0,0,.5);
     padding: 3%;
     z-index: 1;
+}
+.carousel-control-prev:hover, .carousel-control-next:hover {
+    background: rgba(255,255,255,0.2);
+    height: 100%;
 }
 #captionContent {
     position: relative;
@@ -119,22 +138,26 @@ body {
 }
 .portBtn {
     color: white;
-    background-color: olive;
+    background-color: rgba(88, 81, 35);
 }
 .portGitBtn {
     color: white;
-    background-color: darkslategray;
+    background-color: rgba(20, 54, 66);
 }
 
 
 /* -----SECTION THREE----- */
 
 #mainSection3 {
+    background-color: rgba(165, 99, 54);
+    font-family: 'Exo', sans-serif;
     height: 100%;
     width: 100%;
     padding-bottom: 15%;
 }
 #skillsHeader {
+    color: white;
+    font-weight: bold;
     float: right;
     margin-right: 10%;
     margin-top: 5%;
@@ -159,10 +182,10 @@ body {
     text-align: center;
 }
 .card-header {
-    background-color: darkolivegreen;
+    background-color: rgba(88, 81, 35);
 }
 #skillCardBody {
-    background-color: darkslategray;
+    background-color: rgba(38, 60, 65);
 }
 #skillListItem {
     margin-bottom: 20px;
@@ -174,25 +197,28 @@ body {
 /* -----SECTION FOUR----- */
 
 #mainSection4 {
+    font-family: 'Exo', sans-serif;
     height: 100%;
     text-align: center;
     position: relative;
-    background: -webkit-linear-gradient(130deg, darkslategray 40%, rgba(0,0,0,0) 30%), -webkit-linear-gradient(-130deg, darkslategray 40%, tan 40%);
-    background: -o-linear-gradient(130deg, darkslategray 40%, rgba(0,0,0,0) 30%), -o-linear-gradient(-130deg, darkslategray 40%, tan 40%);
-    background: -moz-linear-gradient(130deg, darkslategray 40%, rgba(0,0,0,0) 30%), -moz-linear-gradient(-130deg, darkslategray 40%, tan 40%);
-    background: linear-gradient(130deg, darkslategray 40%, rgba(0,0,0,0) 30%), linear-gradient(-130deg, darkslategray 40%, tan 40%);
+    background: -webkit-linear-gradient(130deg, rgba(20, 54, 66) 40%, rgba(0,0,0,0) 30%), -webkit-linear-gradient(-130deg, rgba(20, 54, 66) 40%, rgba(129, 88, 57) 40%);
+    background: -o-linear-gradient(130deg, rgba(20, 54, 66) 40%, rgba(0,0,0,0) 30%), -o-linear-gradient(-130deg, rgba(20, 54, 66) 40%, rgba(129, 88, 57) 40%);
+    background: -moz-linear-gradient(130deg, rgba(20, 54, 66) 40%, rgba(0,0,0,0) 30%), -moz-linear-gradient(-130deg, rgba(20, 54, 66) 40%, rgba(129, 88, 57) 40%);
+    background: linear-gradient(130deg, rgba(20, 54, 66) 40%, rgba(0,0,0,0) 30%), linear-gradient(-130deg, rgba(20, 54, 66) 40%, rgba(129, 88, 57) 40%);
     justify-content: center;
     align-items: center;
     padding-bottom: 5%;
 }
 #hobbiesHeader {
+    color: white;
+    font-weight: bold;
     margin-top: 5%;
 }
 #hoddiesContainer {
     height: 100%;
     margin: 5%;
     padding: 20px;
-    background-color:olive;
+    background-color:rgba(88, 81, 35);
     color: white;
 }
 .icon {
@@ -201,8 +227,8 @@ body {
     color: white;
 }
 #contact, #checkOut {
-    background-color: tan;
-    color: black;
+    background-color: rgba(129, 88, 57);
+    color: white;
     text-align: center;
     font-size: 20px;
     margin-left: 15%;
@@ -211,12 +237,13 @@ body {
     padding: 5%;
 }
 #emailLink, #resumeLink, #gitLink {
-    color: black;
+    color: white;
 }
 
 /* -----FOOTER----- */
 
 .footer {
+    font-family: 'Exo', sans-serif;
     color: white;
     text-align: center;
     position: relative;
