--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -23,16 +23,16 @@ header {
     top: 0; left: 0; right: 0;
     font-family: 'Exo', sans-serif;
     text-align: center;
-    color: rgb(243, 243, 243);
+    color: #FFFCF2;
 }
 .nav-bar {
     position: absolute;
-    /* border-bottom: 1px solid rgb(243, 243, 243); */
+    /* border-bottom: 1px solid #FFFCF2; */
     background-color: rgba(32, 32, 32, 0.2);
     box-shadow: 0 5px 15px rgba(0,0,0,.5);
 }
 .nav-link {
-    color: rgb(243, 243, 243);
+    color: #FFFCF2;
 }
 .mainHeaderWrapper {
     background-color: rgba(32, 32, 32, 0.2);
@@ -46,7 +46,6 @@ header {
 #mainHeader {
     font-weight: bold;
     font-size: 100px;
-    
 }
 #scrollElem {
     text-align: center;
@@ -54,7 +53,7 @@ header {
     bottom: 0; left: 0; right: 0;
 }
 #mainBottom {
-    color: rgb(243, 243, 243);    
+    color: #FFFCF2;    
 }
 
 @keyframes slide {
@@ -74,16 +73,16 @@ header {
 /* -----SECTION ONE----- */
 
 #mainSection1 {
-    color: rgb(243, 243, 243);
+    color: #FFFCF2;
     font-family: 'Exo', sans-serif;
     height: 100vh;
     padding-bottom: 200px;
     padding-top: 200px;
     text-align: center;
-    background: -webkit-linear-gradient(45deg, rgba(56, 65, 63) 49%, rgba(0,0,0,0) 30%), -webkit-linear-gradient(-45deg,  rgba(56, 65, 63) 49%, rgba(88, 81, 35) 49%);
-    background: -o-linear-gradient(45deg,  rgba(56, 65, 63) 49%, rgba(0,0,0,0) 30%), -o-linear-gradient(-45deg,  rgba(56, 65, 63) 49%, rgba(88, 81, 35) 49%);
-    background: -moz-linear-gradient(45deg,  rgba(56, 65, 63) 49%, rgba(0,0,0,0) 30%), -moz-linear-gradient(-45deg,  rgba(56, 65, 63) 49%, rgba(88, 81, 35) 49%);
-    background: linear-gradient(45deg,  rgba(56, 65, 63) 49%, rgba(0,0,0,0) 30%), linear-gradient(-45deg,  rgba(56, 65, 63) 49%, rgba(88, 81, 35) 49%);
+    background: -webkit-linear-gradient(45deg, rgb(65, 63, 60) 49%, rgba(0,0,0,0) 30%), -webkit-linear-gradient(-45deg,  rgb(65, 63, 60) 49%, #BB4111 49%);
+    background: -o-linear-gradient(45deg,  rgb(65, 63, 60) 49%, rgba(0,0,0,0) 30%), -o-linear-gradient(-45deg,  rgb(65, 63, 60) 49%, #BB4111 49%);
+    background: -moz-linear-gradient(45deg,  rgb(65, 63, 60) 49%, rgba(0,0,0,0) 30%), -moz-linear-gradient(-45deg,  rgb(65, 63, 60) 49%, #BB4111 49%);
+    background: linear-gradient(45deg,  rgb(65, 63, 60) 49%, rgba(0,0,0,0) 30%), linear-gradient(-45deg,  rgb(65, 63, 60) 49%, #BB4111 49%);
 }
 #profile-pic {
     height: 500px;
@@ -99,14 +98,14 @@ header {
     margin: auto;
 }
 .aboutItem {
-    color: rgb(243, 243, 243);
-    border-bottom: 1px solid rgb(243, 243, 243);
+    color: #FFFCF2;
+    border-bottom: 1px solid #FFFCF2;
 }
 .aboutBtn {
-    color: rgb(243, 243, 243);
+    color: #FFFCF2;
 }
 .aboutBtn:hover {
-    background-color: rgba(183, 105, 53,.5);
+    background-color: rgb(255, 252, 242,0.5);
 }
 
 /* -----SECTION TWO----- */
@@ -115,16 +114,16 @@ header {
     font-family: 'Exo', sans-serif;
     height: 100%;
     padding-bottom: 10%;
-    background: linear-gradient(90deg, rgba(20, 54, 66) 60%, rgba(147, 94, 56) 60%);
+    background: linear-gradient(90deg, #EEEBE7 60%, #BB4111 60%);
 }
 #projectsHeader {
-    color: rgb(243, 243, 243);
+    color: #151513;
     font-weight: bold;
     float: left;
     padding-left: 10%;
     padding-top: 5%;
     margin-bottom: 5%;
-    border-bottom: 1px solid rgb(243, 243, 243);
+    border-bottom: 1px solid #151513;
 }
 #projectSelector {
     margin-left: 40%;
@@ -133,15 +132,18 @@ header {
     text-align: center;
 }
 .frontSelector {
-    color: rgb(243, 243, 243);
+    color: #BB4111;
+}
+.backSelector {
+    color: #EEEBE7;
 }
 #projectSelector:hover {
-    background: rgba(255,255,255,0.2);
+    background: rgb(187, 65, 17,0.5);
 }
 #projectSelText {
     writing-mode: vertical-rl;
     text-orientation: upright;
-    background-color: rgba(88, 81, 35);
+    background-color: rgb(65, 63, 60);
 }
 #projectCarouselFRONT, #projectCarouselBACK {
     float: right;
@@ -156,7 +158,7 @@ header {
 .carousel-caption{
     position: absolute;
     height: 250px;
-    background-color: rgb(147, 94, 56,.8);
+    background-color: rgb(187, 65, 17,0.8);
     box-shadow: 0 5px 15px rgba(0,0,0,.5);
     padding: 3%;
     z-index: 1;
@@ -170,31 +172,31 @@ header {
     z-index: 2;
 }
 .portBtn {
-    color: rgb(243, 243, 243);
-    background-color: rgba(88, 81, 35);
+    color: #151513;
+    background-color: #EEEBE7;
 }
 .portGitBtn {
-    color: rgb(243, 243, 243);
-    background-color: rgba(20, 54, 66);
+    color: #FFFCF2;
+    background-color: rgb(65, 63, 60);
 }
 
 
 /* -----SECTION THREE----- */
 
 #mainSection3 {
-    background-color: rgba(56, 65, 63);
+    background-color: rgb(65, 63, 60);
     font-family: 'Exo', sans-serif;
     height: 100%;
     width: 100%;
     padding-bottom: 15%;
 }
 #skillsHeader {
-    color: rgb(243, 243, 243);
+    color: #FFFCF2;
     font-weight: bold;
     float: right;
     padding-right: 10%;
     margin-top: 5%;
-    border-bottom: 1px solid rgb(243, 243, 243);
+    border-bottom: 1px solid #FFFCF2;
 }
 #skillsRow {
     margin-top: 5%;
@@ -204,7 +206,7 @@ header {
 #skillCard1, #skillCard2, #skillCard3 {
     margin-bottom: 5%;
     border: transparent;
-    color: rgb(243, 243, 243);
+    color: #FFFCF2;
     
 }
 #skillListEl {
@@ -218,14 +220,15 @@ header {
     text-align: center;
 }
 .card-header {
-    background-color: rgba(88, 81, 35);
-    border-bottom: 1px solid rgb(243, 243, 243);
+    background-color: #BB4111;
+    border-bottom: 1px solid #FFFCF2;
     font-weight: bold;
     font-size: 24px;
     padding: 20px;
 }
 #skillCardBody {
-    background-color: rgba(20, 54, 66);
+    color: #151513;
+    background-color: #EEEBE7;
 }
 #skillListItem {
     margin-bottom: 20px;
@@ -240,16 +243,16 @@ header {
     height: 100%;
     text-align: center;
     position: relative;
-    background: -webkit-linear-gradient(130deg, rgba(165, 99, 54) 40%, rgba(0,0,0,0) 30%), -webkit-linear-gradient(-130deg, rgba(165, 99, 54) 40%, rgba(20, 54, 66) 40%);
-    background: -o-linear-gradient(130deg, rgba(165, 99, 54) 40%, rgba(0,0,0,0) 30%), -o-linear-gradient(-130deg, rgba(165, 99, 54) 40%, rgba(20, 54, 66) 40%);
-    background: -moz-linear-gradient(130deg, rgba(165, 99, 54) 40%, rgba(0,0,0,0) 30%), -moz-linear-gradient(-130deg, rgba(165, 99, 54) 40%,rgba(20, 54, 66) 40%);
-    background: linear-gradient(130deg, rgba(165, 99, 54) 40%, rgba(0,0,0,0) 30%), linear-gradient(-130deg, rgba(165, 99, 54) 40%, rgba(20, 54, 66) 40%);
+    background: -webkit-linear-gradient(130deg, #EEEBE7 40%, rgba(0,0,0,0) 30%), -webkit-linear-gradient(-130deg, #EEEBE7 40%, #BB4111 40%);
+    background: -o-linear-gradient(130deg, #EEEBE7 40%, rgba(0,0,0,0) 30%), -o-linear-gradient(-130deg, #EEEBE7 40%, #BB4111 40%);
+    background: -moz-linear-gradient(130deg, #EEEBE7 40%, rgba(0,0,0,0) 30%), -moz-linear-gradient(-130deg, #EEEBE7 40%,#BB4111 40%);
+    background: linear-gradient(130deg, #EEEBE7 40%, rgba(0,0,0,0) 30%), linear-gradient(-130deg, #EEEBE7 40%, #BB4111 40%);
     justify-content: center;
     align-items: center;
     padding-bottom: 5%;
 }
 #hobbiesHeader {
-    color: rgb(243, 243, 243);
+    color: #151513;
     font-weight: bold;
     margin-top: 5%;
 }
@@ -257,13 +260,13 @@ header {
     height: 100%;
     margin: 5%;
     padding: 20px;
-    background-color:rgba(88, 81, 35);
-    color: rgb(243, 243, 243);
+    background-color:rgb(65, 63, 60);
+    color: #FFFCF2;
 }
 .icon {
     height: 150px;
     margin: 2%;
-    color: rgb(243, 243, 243);
+    color: #FFFCF2;
 }
 #bottomScrollElem {
     position: relative;
@@ -272,7 +275,7 @@ header {
 }
 #hobbyBottom {
     position: absolute;
-    color: rgb(243, 243, 243);
+    color: #FFFCF2;
     bottom: 10px; left: 0; right: 0;
       
 }
@@ -280,12 +283,12 @@ header {
 
 /* -----FOOTER----- */
 .footerHeader {
-    border-bottom: 1px solid rgb(243, 243, 243);
+    border-bottom: 1px solid #FFFCF2;
 
 }
 #contact, #checkOut {
-    background-color: rgba(20, 54, 66);
-    color: rgb(243, 243, 243);
+    background-color: #BB4111;
+    color: #FFFCF2;
     text-align: center;
     font-size: 20px;
     margin-left: 15%;
@@ -294,16 +297,16 @@ header {
     padding: 5%;
 }
 #emailLink, #resumeLink, #gitLink {
-    color: rgb(243, 243, 243);
+    color: #FFFCF2;
 }
 .footer {
     font-family: 'Exo', sans-serif;
-    color: rgb(243, 243, 243);
+    color: #FFFCF2;
     text-align: center;
     position: relative;
     bottom: 0;
     height: 100%;
-    background-color: rgba(56, 65, 63);
+    background-color: #22221f;
     padding-top: 10%;
     padding-bottom: 3%;
 }
