--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -17,6 +17,7 @@ header {
     width: 5076px;
     background: url("../dev-photos/mountians.jpg") repeat-x;
     animation: slide 60s linear infinite;
+    object-fit: fill;
 }
 .headerOverlay {
     position: absolute;
@@ -79,10 +80,10 @@ header {
     padding-bottom: 200px;
     padding-top: 200px;
     text-align: center;
-    background: -webkit-linear-gradient(45deg, rgb(65, 63, 60) 49%, rgba(0,0,0,0) 30%), -webkit-linear-gradient(-45deg,  rgb(65, 63, 60) 49%, #BB4111 49%);
-    background: -o-linear-gradient(45deg,  rgb(65, 63, 60) 49%, rgba(0,0,0,0) 30%), -o-linear-gradient(-45deg,  rgb(65, 63, 60) 49%, #BB4111 49%);
-    background: -moz-linear-gradient(45deg,  rgb(65, 63, 60) 49%, rgba(0,0,0,0) 30%), -moz-linear-gradient(-45deg,  rgb(65, 63, 60) 49%, #BB4111 49%);
-    background: linear-gradient(45deg,  rgb(65, 63, 60) 49%, rgba(0,0,0,0) 30%), linear-gradient(-45deg,  rgb(65, 63, 60) 49%, #BB4111 49%);
+    background: -webkit-linear-gradient(45deg, rgb(65, 63, 60) 49%, rgba(0,0,0,0) 30%), -webkit-linear-gradient(-45deg,  rgb(65, 63, 60) 49%, #4B9CD3 49%);
+    background: -o-linear-gradient(45deg,  rgb(65, 63, 60) 49%, rgba(0,0,0,0) 30%), -o-linear-gradient(-45deg,  rgb(65, 63, 60) 49%, #4B9CD3 49%);
+    background: -moz-linear-gradient(45deg,  rgb(65, 63, 60) 49%, rgba(0,0,0,0) 30%), -moz-linear-gradient(-45deg,  rgb(65, 63, 60) 49%, #4B9CD3 49%);
+    background: linear-gradient(45deg,  rgb(65, 63, 60) 49%, rgba(0,0,0,0) 30%), linear-gradient(-45deg,  rgb(65, 63, 60) 49%, #4B9CD3 49%);
 }
 #profile-pic {
     height: 500px;
@@ -114,7 +115,7 @@ header {
     font-family: 'Exo', sans-serif;
     height: 100%;
     padding-bottom: 10%;
-    background: linear-gradient(90deg, #EEEBE7 60%, #BB4111 60%);
+    background: linear-gradient(90deg, #EEEBE7 60%, #4B9CD3 60%);
 }
 #projectsHeader {
     color: #151513;
@@ -132,13 +133,13 @@ header {
     text-align: center;
 }
 .frontSelector {
-    color: #BB4111;
+    color: #4B9CD3;
 }
 .backSelector {
     color: #EEEBE7;
 }
 #projectSelector:hover {
-    background: rgb(187, 65, 17,0.5);
+    background: rgb(75, 156, 211,0.5);
 }
 #projectSelText {
     writing-mode: vertical-rl;
@@ -158,7 +159,7 @@ header {
 .carousel-caption{
     position: absolute;
     height: 250px;
-    background-color: rgb(187, 65, 17,0.8);
+    background-color: rgb(75, 156, 211,0.8);
     box-shadow: 0 5px 15px rgba(0,0,0,.5);
     padding: 3%;
     z-index: 1;
@@ -220,7 +221,7 @@ header {
     text-align: center;
 }
 .card-header {
-    background-color: #BB4111;
+    background-color: #4B9CD3;
     border-bottom: 1px solid #FFFCF2;
     font-weight: bold;
     font-size: 24px;
@@ -243,10 +244,10 @@ header {
     height: 100%;
     text-align: center;
     position: relative;
-    background: -webkit-linear-gradient(130deg, #EEEBE7 40%, rgba(0,0,0,0) 30%), -webkit-linear-gradient(-130deg, #EEEBE7 40%, #BB4111 40%);
-    background: -o-linear-gradient(130deg, #EEEBE7 40%, rgba(0,0,0,0) 30%), -o-linear-gradient(-130deg, #EEEBE7 40%, #BB4111 40%);
-    background: -moz-linear-gradient(130deg, #EEEBE7 40%, rgba(0,0,0,0) 30%), -moz-linear-gradient(-130deg, #EEEBE7 40%,#BB4111 40%);
-    background: linear-gradient(130deg, #EEEBE7 40%, rgba(0,0,0,0) 30%), linear-gradient(-130deg, #EEEBE7 40%, #BB4111 40%);
+    background: -webkit-linear-gradient(130deg, #EEEBE7 40%, rgba(0,0,0,0) 30%), -webkit-linear-gradient(-130deg, #EEEBE7 40%, #4B9CD3 40%);
+    background: -o-linear-gradient(130deg, #EEEBE7 40%, rgba(0,0,0,0) 30%), -o-linear-gradient(-130deg, #EEEBE7 40%, #4B9CD3 40%);
+    background: -moz-linear-gradient(130deg, #EEEBE7 40%, rgba(0,0,0,0) 30%), -moz-linear-gradient(-130deg, #EEEBE7 40%,#4B9CD3 40%);
+    background: linear-gradient(130deg, #EEEBE7 40%, rgba(0,0,0,0) 30%), linear-gradient(-130deg, #EEEBE7 40%, #4B9CD3 40%);
     justify-content: center;
     align-items: center;
     padding-bottom: 5%;
@@ -287,7 +288,7 @@ header {
 
 }
 #contact, #checkOut {
-    background-color: #BB4111;
+    background-color: #4B9CD3;
     color: #FFFCF2;
     text-align: center;
     font-size: 20px;
