--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -17,7 +17,7 @@ header {
     width: 5076px;
     background: url("../dev-photos/mountians.jpg") repeat-x;
     animation: slide 60s linear infinite;
-    object-fit: fill;
+    object-fit: cover;
 }
 .headerOverlay {
     position: absolute;
@@ -124,6 +124,7 @@ header {
     height: 100%;
     padding-bottom: 10%;
     background: linear-gradient(90deg, rgba(210, 210, 210) 60%, #4B9CD3 60%);
+    overflow: hidden;
 }
 #projectsHeader {
     color: #151513;
