--- a/assets/style/media.css
+++ b/assets/style/media.css
@@ -1,43 +1,49 @@
 /* ----- media queries ----- */
 @media screen and (max-width: 1000px) {
-    #mainSection2 {
-      height: 55vh;
-    }
-    .frontSelector {
-      margin-left: 15%px;  
-    }
-    #projectSelector {
-      margin: auto;
-    }
-    .selectorRow {
-      margin-left: 20%;
-    }
-    #projectSelText {
-        writing-mode: horizontal-tb; 
-    }
-    #frontRow, #backRow {
-      display: inline-flex;
-    }
-    #contact, #checkOut {
-      margin: auto;
-      margin-bottom: 10%;
-    }
+  .navbar-toggler-icon {
+    font-size: 20px;
+  }
+  .mainHeaderWrapper {
+    margin-top: 20vh;
+  }
+  #mainSection2 {
+    height: 55vh;
+  }
+  .frontSelector {
+    margin-left: 15%px;  
+  }
+  #projectSelector {
+    margin: auto;
+  }
+  .selectorRow {
+    margin-left: 20%;
+  }
+  #projectSelText {
+      writing-mode: horizontal-tb; 
+  }
+  #frontRow, #backRow {
+    display: inline-flex;
+  }
+  #contact, #checkOut {
+    margin: auto;
+    margin-bottom: 10%;
+  }
 }
 
 @media screen and (max-width: 900px) {
-    .mainHeaderWrapper {
-      width: auto;
-    }
-    .nav-link {
-      font-size: 50px;
-    }
-    #mainBottom {
-      font-size: 25px;
-    }
-    #contact, #checkOut {
-      margin: auto;
-      margin-bottom: 10%;
-    }
+  .mainHeaderWrapper {
+    width: auto;
+  }
+  .nav-link {
+    font-size: 50px;
+  }
+  #mainBottom {
+    font-size: 25px;
+  }
+  #contact, #checkOut {
+    margin: auto;
+    margin-bottom: 10%;
+  }
 }
 
 @media screen and (max-width: 700px) {
@@ -49,6 +55,9 @@
   }
   .nav-link {
     font-size: 30px;
+  }
+  .mainHeaderWrapper {
+    margin-top: 10vh;
   }
   .accordion {
     margin: 0;
@@ -92,5 +101,14 @@
   }
   #mainSection4 {
     padding-bottom: 15%;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  #mainHeader {
+    font-size: 60px;
+  }
+  #profile-pic {
+    height: 300px;
   }
 }
