--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -123,7 +123,7 @@ header {
 #mainSection2 {
     font-family: 'Exo', sans-serif;
     height: 100%;
-    padding-bottom: 10%;
+    padding-bottom: 150px;
     background: linear-gradient(90deg, rgba(210, 210, 210) 60%, #4B9CD3 60%);
     overflow: hidden;
 }
@@ -159,10 +159,9 @@ header {
 }
 #projectCarouselFRONT, #projectCarouselBACK {
   position: absolute;
-  right: 0;
+  right: 0; top: 0;  bottom: 0; 
+  margin: auto;
   margin-right: 10%;
-  margin-top: auto;
-  margin-bottom: auto;
   height: 60%;
   max-width: 80%;
 }
@@ -181,7 +180,6 @@ header {
 }
 .carousel-control-prev:hover, .carousel-control-next:hover {
   background: rgba(255,255,255,0.2);
-  height: 100%;
 }
 .portBtn {
   color: #151513;
